fixed the issue where some text on the asset boxes would overflow. Added links to actual game for play buttons

--- a/src/scss/layout/_home-assets.scss
+++ b/src/scss/layout/_home-assets.scss
@@ -35,15 +35,22 @@
         height: 150px;
         width: 150px;
         margin-right: 15px;
+
+        @include respond-to(small) {
+          width: 135px;
+        }
       }
 
       .asset-text {
         height: 150px;
-        width: 110px;
+        width: 125px;
         display: flex;
         flex-direction: column;
         justify-content: left;
         @include stroke(black, 1px);
+        @include respond-to(small) {
+          width: 135px;
+        }
 
         h2 {
           font-family: $font-vg2;
